--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@wojtekmaj/react-daterange-picker": "^3.4.0",
     "axios": "^0.27.2",
     "miragejs": "^0.1.45",
+    "moment": "^2.29.4",
+    "rc-year-calendar": "^1.0.2",
     "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.3.0",
